--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
